[tool.poetry]
name = "bostongene"
version = "0.1.0"
description = ""
authors = ["lainiwa <kirrik96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
dramatiq = {version = "^1.9.0", extras = ["redis", "watch"]}
uvicorn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
